# orbichat-blog-agent

./: .dockerignore  .env.example  .gitignore  ADMIN_UI_PRD.md  AGENTS.md  Dockerfile  PRD.md  README.md  alembic.ini  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  docker-compose.yml  pyproject.toml
agents/: blog_generation.py  orchestrator.py  publish_checks.py  source_research.py  topic_scorer.py  trend_discovery.py  weekly_topic_selection.py
alembic/: env.py
api/: routes_costs.py  routes_drafts.py  routes_health.py  routes_runs.py  routes_topics.py
app/: config.py  db.py  dependencies.py  main.py  models.py
jobs/: analytics_sync.py  celery_app.py  daily_trend_scan.py  placeholders.py  weekly_blog_generation.py
repositories/: call_logs.py  costs.py  drafts.py  fact_checks.py  runs.py  social_posts.py  sources.py  topics.py  trend_candidates.py
schemas/: call.py  common.py  cost.py  draft.py  fact_check.py  run.py  search.py  social.py  source.py  topic.py  trend.py  workflow.py
scripts/: run_backend.sh
services/: brave_client.py  budget.py  cost_tracker.py  draft_regeneration.py  errors.py  exa_client.py  llm_router.py  monitoring.py  openrouter_client.py  pricing.py  prompts.py  publish_safety.py  search_provider_config.py  search_router.py  search_utils.py  tavily_client.py
tests/: test_api_routes.py  test_config.py  test_cost_tracker.py  test_daily_trend_scan.py  test_domain_schemas.py  test_health.py  test_llm_clients.py  test_phase6_safety_monitoring.py  test_placeholder_jobs.py  test_prompts.py  test_run_schema.py  test_search_clients.py  test_sentry.py  (+3 more)
(+25 files in other folders)
