[project]
name = "orbichat-blog-agent"
version = "0.1.0"
description = "Orbichat blog agent scaffold."
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn",
  "celery",
  "redis",
  "sqlalchemy",
  "alembic",
  "psycopg[binary]",
  "pydantic",
  "pydantic-settings",
  "httpx",
  "tenacity",
  "python-dotenv",
  "orjson",
  "loguru",
  "openai",
  "tavily-python",
  "exa-py",
  "sentry-sdk",
  "pytest",
  "ruff",
  "mypy",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
ignore_missing_imports = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*", "api*", "agents*", "jobs*", "repositories*", "schemas*", "services*"]
exclude = ["tests*", "alembic*", "outputs*", "prompts*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
